Added in episode 7 - Julie Nee

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import astropodConfig from "../../.astropod/astropod.config.json";
   <p>
     {astropodConfig.description}
   </p>
-  <h2>About out Host</h2>
+  <h2>About our Host</h2>
   <p>
     With over 16 years (10 years professional) of experience in developing and managing teams on live projects, Aaron is a passionate tech leader and Agile Evangelist. His past projects have ranged from medical web apps, online WYSIWYG editors and live casino websites to the multimillion player Facebook game ‘The Sims Social’. With a strong background in design and development, Aaron has successfully sped up content & development production through the introduction and development of efficiency improving tools. He uses his passion for the Scrum framework and Agile methodologies to organise people and projects to deliver value effectively, while simultaneously mentoring teams in their engagement with the process and mentoring the next generation of frontend developers
   </p>
