--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -92,6 +92,24 @@ const books = [
         image: "../books/player.jpg",
         url: "https://amzn.to/3PMA9eV",
         episode: 6
+    },
+    {
+        title: "The Power of Positive Leadership: How and Why Positive Leaders Transform Teams and Organizations and Change the World (Jon Gordon)",
+        image: "../books/positive.jpg",
+        url: "https://amzn.to/3PSUmA1",
+        episode: 7 
+    },
+    {
+        title: "Mirror Mirror: 5 Reflections to Clear the Fog and Help You Shine",
+        image: "../books/julienee.jpg",
+        url: "https://amzn.to/3EZRwmh",
+        episode: 7 
+    },
+    {
+        title: "All It Takes Is a Goal: The 3-Step Plan to Ditch Regret and Tap Into Your Massive Potential",
+        image: "../books/allittakes.jpg",
+        url: "https://amzn.to/46lrG8J",
+        episode: 7 
     }
 ]
 
