Added episode 8 to the website

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -110,6 +110,24 @@ const books = [
         image: "../books/allittakes.jpg",
         url: "https://amzn.to/46lrG8J",
         episode: 7 
+    },
+    {
+        title: "The Five Dysfunctions of a Team: A Leadership Fable",
+        image: "../books/5-team.jpg",
+        url: "https://amzn.to/3s33oBm",
+        episode: 8
+    },
+    {
+        title: "The Advantage: Why Organizational Health Trumps Everything Else In Business",
+        image: "../books/advantage.jpg",
+        url: "https://amzn.to/3SdmW0C",
+        episode: 8
+    },
+    {
+        title: "Punished By Rewards",
+        image: "../books/punished.jpg",
+        url: "https://amzn.to/3s1adU1",
+        episode: 8
     }
 ]
 
