Added Episode 9 - Steve Dwire

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -128,6 +128,12 @@ const books = [
         image: "../books/punished.jpg",
         url: "https://amzn.to/3s1adU1",
         episode: 8
+    },
+    {
+        title: "Atlas of the Heart: Mapping Meaningful Connection and the Language of Human Experience",
+        image: "../books/atlas.jpg",
+        url: "https://amzn.to/3TbEk6g",
+        episode: 9
     }
 ]
 
