--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -134,6 +134,12 @@ const books = [
         image: "../books/atlas.jpg",
         url: "https://amzn.to/3TbEk6g",
         episode: 9
+    },
+    {
+        title: "Turn The Ship Around!: A True Story of Turning Followers Into Leaders",
+        image: "../books/ship.jpg",
+        url: "https://amzn.to/47GgoeI",
+        episode: 10
     }
 ]
 
