--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -140,6 +140,12 @@ const books = [
         image: "../books/ship.jpg",
         url: "https://amzn.to/47GgoeI",
         episode: 10
+    },
+    {
+        title: "Into the Planet: My Life as a Cave Diver by Jill Heinerth",
+        image: "../books/into.jpg",
+        url: "https://www.amazon.co.uk/Into-Planet-Life-Cave-Diver/dp/0062691554/ref=sr_1_1?crid=3BZZFCFGSMADD&keywords=into+the+planet&qid=1706432135&sprefix=into+the+planet%2Caps%2C69&sr=8-1",
+        episode: 11
     }
 ]
 
