Added s02e03 - tobias mende

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -146,6 +146,26 @@ const books = [
         image: "../books/into.jpg",
         url: "https://www.amazon.co.uk/Into-Planet-Life-Cave-Diver/dp/0062691554/ref=sr_1_1?crid=3BZZFCFGSMADD&keywords=into+the+planet&qid=1706432135&sprefix=into+the+planet%2Caps%2C69&sr=8-1",
         episode: 11
+    },
+    {
+        title: "Reinventing Organizations",
+        image: "../books/reinvent.jpg",
+        url: "https://www.amazon.co.uk/Reinventing-Organizations-Creating-Inspired-Consciousness/dp/2960133501/ref=sr_1_1?crid=3QMEKI9E1X9AM&keywords=reinventing+organisations&qid=1707316888&sprefix=reinvi%2Caps%2C310&sr=8-1",
+        episode: 12
+    }
+    ,
+    {
+        title: "Accelerate: The Science of Lean Software and Devops",
+        image: "../books/acce.jpg",
+        url: "https://www.amazon.co.uk/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339",
+        episode: 12
+    }
+    ,
+    {
+        title: "Leadership Is Language:",
+        image: "../books/lang.jpg",
+        url: "https://www.amazon.co.uk/Leadership-Language-Hidden-Power-What/dp/0241373662/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1707317011&sr=8-2",
+        episode: 12
     }
 ]
 
