--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -167,6 +167,20 @@ const books = [
         url: "https://www.amazon.co.uk/Leadership-Language-Hidden-Power-What/dp/0241373662/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1707317011&sr=8-2",
         episode: 12
     }
+    ,
+    {
+        title: "Building a Second Brain: A Proven Method to Organise Your Digital Life and Unlock Your Creative Potential",
+        image: "../books/second.jpg",
+        url: "https://www.amazon.co.uk/Building-Second-Brain-Organise-Potential/dp/1800812221/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1707855546&sr=8-1",
+        episode: 13
+    }
+    ,
+    {
+        title: "Effective Remote Work: For Yourself, Your Team, and Your Company",
+        image: "../books/effective.jpg",
+        url: "https://www.amazon.co.uk/Effective-Remote-Work-Yourself-Company/dp/1680509225/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1707855462&sr=8-1",
+        episode: 13
+    }
 ]
 
 ---
